<resources>
    <string name="app_name">Customer</string>
    <string name="loading">Loading</string>
    <string name="retry">Retry</string>
    <string name="user_consent">User Consent</string>
    <string name="no">No</string>
    <string name="logout_message">Do you want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="please_select_one">Please select one</string>
    <string name="select_reason">Select Reason</string>
    <string name="select_language">Select Language</string>
    <string name="configuration_error_contact_devloper">Configuration error, please contact developer.</string>
    <string name="server_not_found">Server not found</string>
    <string name="time_out_error">Time out error, try after sometime.</string>
    <string name="service_not_available">Service not available, try again later.</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="too_many_request">Too many request, Please try after few seconds.</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="unAuthorised_request">Un Authorised request</string>
    <string name="login">Login</string>
    <string name="_androidx_security_master_key_">_androidx_security_master_key_</string>
    <string name="title_splash">Start creating friends and family events and much more....Step inside...</string>
    <string name="get_started">Get Started</string>
    <string name="signin">Sign in</string>
    <string name="mobile">Mobile number</string>
    <string name="colonen">|</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="or">or</string>
    <string name="emailid">Email Id</string>
    <string name="sign_in">Sign in</string>
    <string name="login_message">The phone number you have mentioned does not match our account. Please try again</string>
    <string name="login_email_message">The email address you have mentioned does not match our account. Please try again</string>
    <string name="perter_gmail_com">aaa@bbb.com</string>
    <string name="please_Enter_Any_EMail_or_Phone_Number">Please Enter Any Email or Phone Number</string>
    <string name="please_Enter_Email_or_MobileNumber">Please Enter Email or MobileNumber</string>
    <string name="logo">LOGO</string>
    <string name="otp_verification">OTP verification</string>
    <string name="please_enter_your_verification_code_sent_your_email">Please enter your verification code sent your email</string>
    <string name="enter_otp_sent_to_your_email">Enter OTP Sent to your number</string>
    <string name="click_resend_in">Click Resend in</string>
    <string name="_00_30"> 00:30</string>
    <string name="did_t_receive_otp">Did\'t receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="submit">Submit</string>
    <string name="OTP_is_expired">OTP is expired. Click on Resend to receive new OTP</string>
    <string name="otp_sent_to_your_mail"><![CDATA[OTP has been sent to your registered Email ID & Mobile number]]></string>
    <string name="resend_clicked_multiple_time">Clicked multiple time Resend otp. Try after some time</string>
    <string name="OTP_expired">OTP expired</string>
    <string name="Invalid_session_for_the_user">Invalid session for the user</string>
    <string name="Failed_to_connect_to_cognito_idp">Failed to connect to cognito-idp</string>
    <string name="Unable_to_resolve_host">Unable to resolve host</string>
    <string name="CreateAuthChallenge_failed_with_error">CreateAuthChallenge failed with error PhoneNumber not Verified</string>
    <string name="Operation_requires_a_signed_in_state">Operation requires a signed-in state</string>
    <string name="Network_Error._Please_Sign_in_again">Network Error. Please Sign in again</string>
    <string name="dashboardactivity">DashBoardActivity</string>
    <string name="no_internet_connection_available">No Internet Connection Available</string>
    <string name="your_device_is_not_connected_to_internet_please_make_sure_your_connection_is_working">Your device is not connected to internet, Please make sure your connection is working.</string>
    <string name="try_again">Try Again</string>
    <string name="internet_Connection">Internet Connection is not available. Please check your network connection.</string>
    <string name="internet_error">Internet error</string>
    <string name="dashboard">Dashboard</string>
    <string name="event_overview">Event Overview</string>
    <string name="_4">4</string>
    <string name="active">Active</string>
    <string name="my_events">MY EVENTS</string>
    <string name="_4_active_events">4 active events</string>
    <string name="feb_20">feb 20</string>
    <string name="services_status">Services status</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="saraas_birthday">Saraas Birthday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_request">New Request</string>
    <string name="icon">icon</string>
    <string name="select_your_event">Select your event</string>
    <string name="next">Next</string>
    <string-array name="currency_type">
        <item>USD($)</item>
        <item>GBP(\u00a3)</item>
        <item>INR(\u20B9)</item>
    </string-array>
    <string name="USD">USD($)</string>
    <string name="GBP">GBP(\u00a3)</string>
    <string name="INR">INR(\u20B9)</string>
    <string name="show_event_questions_dialog">showEventQuestionsDialog</string>
    <string name="birthday_event_details">Birthday Event Details</string>
    <string name="event">Event</string>
    <string name="event_name">Event name</string>
    <string name="event_name_is_required">Event name is required</string>
    <string name="event_date">Event Date</string>
    <string name="choose_here">Choose here</string>
    <string name="event_the_valid_date">Enter the valid date</string>
    <string name="number_of_attendees">Number of attendees</string>
    <string name="number_of_attendees_is_required">Number of attendees is required</string>
    <string name="estimated_total_budget">Estimated total budget</string>
    <string name="amount">Amount</string>
    <string name="estimated_budget_is_required">Estimated budget is required</string>
    <string name="venue_details">Venue details</string>
    <string name="i_know_my_venue_details">I know my venue details</string>
    <string name="i_will_be_selecting_venue_in_service_location">I will be selecting venue in service location</string>
    <string name="address_1">Address 1</string>
    <string name="address1">Address1</string>
    <string name="address_line_1_is_required">Address line 1 is required</string>
    <string name="address_2">Address 2</string>
    <string name="address_line_2_is_required">Address line 2 is required</string>
    <string name="country">Country</string>
    <string name="select_the_country">Select the country</string>
    <string name="state">State</string>
    <string name="select_the_state">Select the state</string>
    <string name="city">City</string>
    <string name="city_is_required">City is required</string>
    <string name="zip_code">Zip Code</string>
    <string name="zip_code_is_required">Zip code is required</string>
    <string name="host_details">Host details</string>
    <string name="name">Name</string>
    <string name="name_is_required">Name is required</string>
    <string name="mobile_number">Mobile number</string>
    <string name="mobile_number_is_required">Mobile number is required</string>
    <string name="email_id">Email id</string>
    <string name="email_is_required">Email is required</string>
    <string name="provide_event_details">Provide event details</string>
    <string name="start_questions">Start questions</string>
    <string name="select_your_country">Select your country</string>
    <string name="select_your_state">Select your state</string>
    <string name="order_requirements">Order requirements</string>
    <string name="want_cake_textview">Want cake? textview</string>
    <string name="cancel">Cancel</string>
    <string name="event_Details">Event Details</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="view_order">View order</string>
    <string name="please_select_the_answer">Please select the answer</string>
    <string name="pending">Pending</string>
    <string name="active_counts">active counts</string>
    <string name="pending_counts">pending counts</string>
    <string name="draft_counts">draft counts</string>
    <string name="reject_counts">reject counts</string>
    <string name="closed_counts">closed counts</string>
    <string name="move_to_Dashboard">Move_to_Dashboard</string>
    <string name="move_to_sigin">MOVE_TO_SIGNING</string>
    <string name="select_any_event">Select any Event to proceed</string>
    <string name="no_events">No Events Available</string>
    <string name="todo">TODO</string>
    <string name="_12am_3am">12am - 3am</string>
    <string-array name="mile_distance">
        <item>0–50 Miles</item>
        <item>50–100 Miles</item>
        <item>100–150 Miles</item>
    </string-array>
    <string name="please_select_valid_date">Please Select Valid Date</string>
    <string name="save_services">Save services</string>
    <string name="save">Save</string>
    <string name="service_list">Service list</string>
    <string name="event_dates">Event date:</string>
    <string name="_12_02_2022">12/02/2022</string>
    <string name="view_modify_event_details">View/Modify event details</string>
    <string name="admin_approval">Admin approval</string>
    <string name="order_details">Order details</string>
    <string name="dotted_line">dotted_line</string>
    <string name="bidding_status">Bidding status</string>
    <string name="payment">Payment</string>
    <string name="feedback">Feedback</string>
    <string name="_2500">2500</string>
    <string name="ca4215254265">ca4215254265</string>
    <string name="quote">Quote</string>
    <string name="fork_amp_spoon_catering">fork_amp_spoon_catering</string>
    <string name="bid_cut_off">Bid cut off</string>
    <string name="mar">Mar</string>
    <string name="service_date">Service date</string>
    <string name="aug_26">Aug 26</string>
    <string name="_12_aug">12 Aug</string>
    <string name="change_in_mind">change_in_mind</string>
    <string name="start_service">start_service</string>
    <string name="services_offered">Services offered</string>
    <string name="catering">catering</string>
    <string name="provide_details">Provide details</string>
    <string name="_12_aug_2021">12 Aug 2021</string>
    <string name="add_icon">Add icon</string>
    <string name="event_dt">EventDetails</string>
    <string name="about_service">About Service</string>
    <string name="about_event">About Event</string>
    <string name="comment_box">Comment Box</string>
    <string name="multiple_choices">Multiple Choices</string>
    <string name="date_time">Date/Time</string>
    <string name="radio_button">Radio Button</string>
    <string name="drop_down">Drop Down</string>
    <string name="event_details_activity">EventDetailsActivity</string>
    <string name="select">Select*</string>
    <string name="initial">Initial</string>
    <string name="after">After</string>
    <string name="please_answer_all_mandatory_questions">Please answer all mandatory questions</string>
    <string name="_12_26">12:26AM</string>
    <string name="george_town">George Town</string>
    <string name="bid">Bid</string>
    <string name="acceptbtn">AcceptBtn</string>
    <string name="q1">Q1.</string>
    <string name="question">Question?</string>
    <string name="answer_yes">Answer: Yes</string>
    <string name="view_event_details">View event details</string>
</resources>