<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/view_questions_border"
    android:padding="@dimen/_5sdp">

    <TextView
        android:id="@+id/question_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/q1"
        android:textColor="@color/highlight_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/question"
        android:textColor="@color/highlight_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/question_number_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answer_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/mulish_medium"
        android:text="@string/answer_yes"
        android:textColor="@color/highlight_text_color"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/question_number_text"
        app:layout_constraintTop_toBottomOf="@+id/question_text" />

</androidx.constraintlayout.widget.ConstraintLayout>