<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_bold"
            android:text="@string/service_list"
            android:textSize="@dimen/_15ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:padding="@dimen/_2sdp" />

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </LinearLayout>
</layout>