<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="events_dashboard_view_model"
            type="com.smf.customer.view.dashboard.fragment.serviceFragment.eventListDashBoard.EventsDashBoardViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/costraint_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <TextView
            android:id="@+id/dashboard_tx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:fontFamily="@font/mulish_bold"
            android:gravity="top"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/theme_corner_radius_white_background"
            android:backgroundTint="@color/fade_gray"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/gray_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tx"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/title_txt"
                android:layout_width="@dimen/_120sdp"
                android:maxLength="15"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/saraas_birthday"
                android:textColor="@color/black_event_title"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/mulish_bold"
                android:gravity="center_vertical"
                android:text="@string/event_dates"
                android:textColor="@color/black_event_title"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_txt"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/event_date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/mulish_bold"
                android:text="@string/_12_aug_2021"
                android:textColor="@color/black_event_title"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="@+id/event_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/event_date"
                app:layout_constraintTop_toTopOf="@+id/event_date"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/event_view_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mulish_bold"
                android:gravity="center_vertical"
                android:text="@string/view_event_details"
                android:textColor="@color/darkblue_smf_font"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_date"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/my_event_icon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:contentDescription="@string/icon"
                android:src="@drawable/availability"
                app:layout_constraintBottom_toBottomOf="@+id/title_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintStart_toEndOf="@+id/title_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/stepper_listview"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_view_details" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

