<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_card_view_layout"
    android:layout_width="@dimen/_80sdp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_3sdp"
    android:layout_marginBottom="@dimen/_3sdp"
    android:padding="@dimen/_3sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_6sdp">

        <ImageView
            android:id="@+id/my_event_icon"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:contentDescription="@string/icon"
            android:fontFamily="@font/mulish_bold"
            android:src="@drawable/festo_image"
            android:text="@string/feb_20"
            android:textColor="@color/darkblue_smf_font"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/even_name_tx"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/even_name_tx"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/even_name_tx"
            android:layout_width="@dimen/_67sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/saraas_birthday"
            android:textColor="@color/darkblue_smf_font"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_event_icon"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/tick_icon"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:contentDescription="@string/icon"
            android:src="@drawable/green_check"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/even_name_tx"
            app:layout_constraintStart_toStartOf="@+id/even_name_tx"
            app:layout_constraintTop_toBottomOf="@+id/even_name_tx" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>